[package]
name = "fifteen_minute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
osmpbf = "0.2"
geocoding = { version = "*" }
urlencoding = { version = "*" }
structopt = "0.3.21"
exitfailure = "0.5.1"
reqwest = { version = "0.11.0", features = ["json", "blocking"] }
serde = "1.0.190"
serde_json = "1.0.108"
serde_derive = "1.0.190"