[package]
name = "fifteen_minute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
clap = { version = "*", features = ["derive"] }
geocoding = { version = "*" }
reqwest = { version = "*", features = ["json", "blocking"] }
serde = "*"
serde_json = "1.0.108"
fast_paths = "0.2.0"
kiddo = "4.0.0"
rayon = "1.8.0"
haversine-redux = "0.2.1"
bimap = "0.6.3"
